fix T658b/T5776 to use POSIX grep -c instead of GNU's --count

--- a/testsuite/tests/simplCore/should_compile/Makefile
+++ b/testsuite/tests/simplCore/should_compile/Makefile
@@ -17,12 +17,12 @@ T3055:
 
 T5658b:
 	$(RM) -f T5658b.o T5658b.hi
-	'$(TEST_HC)' $(TEST_HC_OPTS) -O -c T5658b.hs -ddump-simpl | grep --count indexIntArray
+	'$(TEST_HC)' $(TEST_HC_OPTS) -O -c T5658b.hs -ddump-simpl | grep -c indexIntArray
 # Trac 5658 meant that there were three calls to indexIntArray instead of two
 
 T5776:
 	$(RM) -f T5776.o T5776.hi
-	'$(TEST_HC)' $(TEST_HC_OPTS) -O -c T5776.hs -ddump-rules | grep --count dEq
+	'$(TEST_HC)' $(TEST_HC_OPTS) -O -c T5776.hs -ddump-rules | grep -c dEq
 
 T3772:
 	$(RM) -f T3772*.hi T3772*.o
