Don't build or test dph by default
Signed-off-by: Austin Seipp <austin@well-typed.com>

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -791,7 +791,7 @@ HSCOLOUR_SRCS = YES
 endif
 
 # Build DPH?
-BUILD_DPH = YES
+BUILD_DPH = NO
 
 ################################################################################
 #
