--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -66,8 +66,8 @@ V = 1
 # working on stage 2 and want to freeze stage 1 and the libraries for
 # a while.
 
-# Uncomment the following line to disable building DPH
-#BUILD_DPH=NO
+# Uncomment the following line to enable building DPH
+#BUILD_DPH=YES
 
 GhcLibWays = $(if $(filter $(DYNAMIC_GHC_PROGRAMS),YES),v dyn,v)
 
