Declare `ghc-head` to be haddock's upstream branch
This will affect commands such as

   git submodule update --remote utils/haddock

to use `ghc-head` instead of the default `master` branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -118,6 +118,7 @@
 	path = utils/haddock
 	url = ../haddock.git
 	ignore = none
+	branch = ghc-head
 [submodule "nofib"]
 	path = nofib
 	url = ../nofib.git
