--- a/mk/project.mk.in
+++ b/mk/project.mk.in
@@ -157,3 +157,6 @@ SOLARIS_BROKEN_SHLD=@SOLARIS_BROKEN_SHLD@
 # Do we have a C compiler using an LLVM back end?
 CC_LLVM_BACKEND  = @CC_LLVM_BACKEND@
 CC_CLANG_BACKEND = @CC_CLANG_BACKEND@
+
+# Is the stage0 compiler affected by Bug #9439?
+GHC_LLVM_AFFECTED_BY_9439 = @GHC_LLVM_AFFECTED_BY_9439@
