--- a/testsuite/tests/simplCore/should_compile/T7702plugin/Makefile
+++ b/testsuite/tests/simplCore/should_compile/T7702plugin/Makefile
@@ -13,7 +13,7 @@ package.%:
 	mkdir pkg.$*
 	"$(TEST_HC)" -outputdir pkg.$* --make -v0 -o pkg.$*/setup Setup.hs
 
-	echo "[]" > pkg.$*/local.package.conf
+	"$(GHC_PKG)" init pkg.$*/local.package.conf
 
 	pkg.$*/setup configure --distdir pkg.$*/dist -v0 $(CABAL_PLUGIN_BUILD) --prefix="$(HERE)/pkg.$*/install" --with-compiler="$(TEST_HC)" --with-hc-pkg="$(GHC_PKG)" --package-db=pkg.$*/local.package.conf
 	pkg.$*/setup build     --distdir pkg.$*/dist -v0
