[ci skip] Update .gitignore
Signed-off-by: Austin Seipp <austin@well-typed.com>

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ _darcs/
 /bindisttest/
 /ch01.html
 /ch02.html
+/compiler/dist/
 /compiler/ghc.cabal
 /compiler/ghc.cabal.old
 /distrib/configure.ac
