Fix failing test on BINDIST=YES
Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

--- a/testsuite/tests/rename/prog006/Makefile
+++ b/testsuite/tests/rename/prog006/Makefile
@@ -37,7 +37,7 @@ rn.prog006:
 	echo "import-dirs: `./pwd`" >>pkg.conf
 	echo "exposed-modules: B.C" >>pkg.conf
 	rm -rf $(LOCAL_PKGCONF)
-	$(GHC_PKG) init $(LOCAL_PKGCONF)
+	'$(GHC_PKG)' init $(LOCAL_PKGCONF)
 	$(LOCAL_GHC_PKG) register pkg.conf -v0
 	'$(TEST_HC)' $(TEST_HC_OPTS) -c -package-db $(LOCAL_PKGCONF) -package test -fforce-recomp A.hs -i
 # The -i clears the search path, so A.hs will find B.C from package test
