--- a/libraries/template-haskell/template-haskell.cabal
+++ b/libraries/template-haskell/template-haskell.cabal
@@ -1,6 +1,6 @@
 name:           template-haskell
 version:        2.10.0.0
--- GHC 7.8.1 released with 2.9.0.0
+-- NOTE: Don't forget to update ./changelog.md
 license:        BSD3
 license-file:   LICENSE
 category:       Template Haskell
@@ -15,6 +15,8 @@ description:
     .
     See <http://www.haskell.org/haskellwiki/Template_Haskell> for more
     information.
+
+extra-source-files: changelog.md
 
 source-repository head
     type:     git
@@ -46,7 +48,7 @@ Library
         Language.Haskell.TH.Lib.Map
 
     build-depends:
-        base       == 4.7.*,
+        base       == 4.8.*,
         pretty     == 1.1.*
 
     -- We need to set the package key to template-haskell (without a
