DRAFT: Implement new integer-gmp2 from scratch (re #9281)
Summary:
(preliminary commit message)

This is done as a separate integer-gmp2 backend library because it
turned out to become a complete rewrite from scratch. This has been
tested only on Linux/x86_64 so far. The code has been written while
taking into account Linux/i386 and "64-bit" Windows, but will probably
need some tweaking to get right.

Also, we don't do any autoconf stuff anymore, and rely on Cabal's
"extra-libraries: gmp" to do the right thing (which probably won't work
everywhere)

Moreover, this is currently a big huge patch, which could easily be
split into 2 or 3 commits.

Test Plan: nofib & testsuite

Reviewers: #ghc, austin

Subscribers: ekmett, simonpj, ezyang, rwbarton, phaskell, simonmar, relrod, carter

Differential Revision: https://phabricator.haskell.org/D82

GHC Trac Issues: #9281

--- a/testsuite/tests/rts/Makefile
+++ b/testsuite/tests/rts/Makefile
@@ -111,9 +111,9 @@ GHC_PRIM_LIB = $(shell $(LOCAL_GHC_PKG) field ghc-prim hs-libraries | sed 's/^[^
 # We need to get first library directory here in order to get rid of
 # system gmp library directory installation when ghc is configured
 # with --with-gmp-libraries=<dir> parameter
-INTEGER_GMP_DIR = $(shell $(LOCAL_GHC_PKG) field integer-gmp library-dirs \
+INTEGER_GMP_DIR = $(shell $(LOCAL_GHC_PKG) field integer-gmp2 library-dirs \
 	| sed 's/^[^:]*: *//' | head -1)
-INTEGER_GMP_LIB = $(shell $(LOCAL_GHC_PKG) field integer-gmp hs-libraries | sed 's/^.*: *//')
+INTEGER_GMP_LIB = $(shell $(LOCAL_GHC_PKG) field integer-gmp2 hs-libraries | sed 's/^.*: *//')
 
 BASE        = $(BASE_DIR)/lib$(BASE_LIB).a
 GHC_PRIM    = $(GHC_PRIM_DIR)/lib$(GHC_PRIM_LIB).a
