--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -117,6 +117,7 @@ Library
         Control.Monad.ST.Strict
         Control.Monad.ST.Unsafe
         Control.Monad.Zip
+        Data.Bifunctor
         Data.Bits
         Data.Bool
         Data.Char
