Updated testsuite/.gitignore to exclude some test artifacts on Windows.
Reviewers: austin

Reviewed By: austin

Subscribers: thomie, carter, simonmar

Differential Revision: https://phabricator.haskell.org/D404

--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -29,10 +29,12 @@ Thumbs.db
 .hpc.*/
 
 *.genscript
+*.stdout.normalised
+*.stdout-mingw32.normalised
+*.stdout-ghc.normalised
 *.stderr.normalised
 *.stderr-mingw32.normalised
 *.stderr-ghc.normalised
-*.stdout.normalised
 *.interp.stdout
 *.interp.stderr
 *.run.stdout
