--- a/testsuite/tests/profiling/should_run/scc001.prof.sample
+++ b/testsuite/tests/profiling/should_run/scc001.prof.sample
@@ -1,28 +1,33 @@
-	Fri Oct 14 16:27 2011 Time and Allocation Profiling Report  (Final)
+       Sun Nov  2 20:50 2014 Time and Allocation Profiling Report  (Final)
 
-	   scc001 +RTS -hc -p -RTS
+          scc001 +RTS -hc -p -RTS
 
-	total time  =        0.00 secs   (0 ticks @ 20 ms)
-	total alloc =      46,020 bytes  (excludes profiling overheads)
+       total time  =        0.00 secs   (0 ticks @ 1000 us, 1 processor)
+       total alloc =      51,344 bytes  (excludes profiling overheads)
 
 COST CENTRE MODULE                %time %alloc
 
-MAIN        MAIN                    0.0   23.0
-CAF         GHC.IO.Encoding.Iconv   0.0    1.3
-CAF         GHC.IO.Handle.FD        0.0   74.2
+MAIN        MAIN               0.0    1.9
+CAF         GHC.IO.Encoding    0.0    5.4
+CAF         GHC.IO.Handle.FD   0.0   67.3
+CAF         GHC.Conc.Signal    0.0    1.3
+main        Main               0.0   22.8
 
 
                                                       individual     inherited
 COST CENTRE MODULE                  no.     entries  %time %alloc   %time %alloc
 
-MAIN        MAIN                    101           0    0.0   23.0     0.0  100.0
- CAF        GHC.Show                141           0    0.0    0.3     0.0    0.3
- CAF        GHC.IO.Handle.FD        128           0    0.0   74.2     0.0   74.2
- CAF        GHC.IO.Encoding.Iconv   120           0    0.0    1.3     0.0    1.3
- CAF        GHC.Conc.Signal         110           0    0.0    0.7     0.0    0.7
- CAF        Main                    107           0    0.0    0.4     0.0    0.4
-  (...)     Main                    206           1    0.0    0.0     0.0    0.0
-  h         Main                    205           1    0.0    0.0     0.0    0.0
-  main      Main                    202           1    0.0    0.0     0.0    0.0
-   g        Main                    204           1    0.0    0.0     0.0    0.0
-   f        Main                    203           1    0.0    0.0     0.0    0.0
+MAIN        MAIN                     44           0    0.0    1.9     0.0  100.0
+ main       Main                     89           0    0.0   22.8     0.0   22.8
+  g         Main                     91           1    0.0    0.0     0.0    0.0
+  f         Main                     90           1    0.0    0.0     0.0    0.0
+ CAF        Main                     87           0    0.0    0.1     0.0    0.1
+  (...)     Main                     93           1    0.0    0.0     0.0    0.0
+  h         Main                     92           1    0.0    0.0     0.0    0.0
+  main      Main                     88           1    0.0    0.0     0.0    0.0
+ CAF        GHC.Show                 84           0    0.0    0.6     0.0    0.6
+ CAF        GHC.Conc.Signal          82           0    0.0    1.3     0.0    1.3
+ CAF        GHC.IO.Handle.FD         80           0    0.0   67.3     0.0   67.3
+ CAF        GHC.IO.Handle.Text       79           0    0.0    0.2     0.0    0.2
+ CAF        GHC.IO.Encoding          75           0    0.0    5.4     0.0    5.4
+ CAF        GHC.IO.Encoding.Iconv    69           0    0.0    0.5     0.0    0.5
