Test #9204 in roles/should_fail/T9204

--- a/testsuite/tests/roles/should_fail/Makefile
+++ b/testsuite/tests/roles/should_fail/Makefile
@@ -7,3 +7,7 @@ include $(TOP)/mk/test.mk
 Roles12:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -c Roles12.hs-boot
 	-'$(TEST_HC)' $(TEST_HC_OPTS) -c Roles12.hs
+
+T9204:
+	'$(TEST_HC)' $(TEST_HC_OPTS) -c T9204.hs-boot
+	-'$(TEST_HC)' $(TEST_HC_OPTS) -c T9204.hs
